# materialx

./: Cargo.toml  Readme.md
.github/: dependabot.yml
.github/workflows/: ci.yml
assets/: .gitignore
bevy-materialx-importer/: Cargo.toml  README.md
bevy-materialx-importer/examples/: demo.rs  loader.rs
bevy-materialx-importer/src/: lib.rs  loader.rs  standard_material.rs
bevy-materialx-importer/src/standard_material/: mod.rs  processor.rs
demo/: Cargo.toml
demo/src/: balls.rs  camera.rs  load_files.rs  main.rs
downloader/: Cargo.toml  README.md
downloader/src/: lib.rs  main.rs  sources.rs
downloader/src/sources/: ambientcg.rs  matlib.rs
materialx-parser/: Cargo.toml  README.md
materialx-parser/src/: data_types.rs  input.rs  lib.rs  nodes.rs  typed_input.rs
materialx-parser/src/ast/: from.rs  meta.rs  mod.rs
materialx-parser/src/data_types/: convert.rs  mod.rs  primitives.rs
materialx-parser/src/nodes/: accessor.rs  input.rs  mod.rs  resolve.rs  standard_nodes.rs
notes/: AST-ideas.md  bevy-assets.md  deserialization.md  glossary.md  pbr.md  plan.md  self-described.md  what.md
resources/amd-examples/: README.md
resources/amd-examples/matlib-downloader/: Cargo.toml  README.md
resources/amd-examples/matlib-downloader/src/: lib.rs  main.rs
resources/downloader/: Cargo.toml  README.md
resources/downloader/src/: lib.rs  main.rs  sources.rs  utils.rs
resources/downloader/src/sources/: ambientcg.rs  matlib.rs
resources/examples/: README.md
resources/examples/StandardSurface/: standard_surface_brass_tiled.mtlx
resources/materialx-examples/: README.md
