[package]
name = "demo"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
bevy = { version = "0.14.0", features = ["jpeg", "exr", "pbr_multi_layer_material_textures"] }
bevy-materialx-importer = { version = "0.1.0", path = "../bevy-materialx-importer" }
bevy_easings = "0.14.0"
bevy_mod_picking = "0.20.1"
glob = "0.3.1"
