[package]
name = "materials-downloader"
version = "0.1.0"
edition = "2021"
authors = [
    "Pascal Hertleif <killercup@gmail.com>"
]
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.8", features = ["derive"] }
fs-err = { version = "2.11.0", features = ["io_safety"] }
reqwest = { version = "0.12.5", features = ["rustls-tls", "json", "blocking"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.122"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = { version = "2.5.2", features = ["serde"] }
zip = "2.1.3"
